Mon Aug  8 14:33:22 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsconvert.h src/tds/convert.c:
	- improve ms time/date conversions

Mon Aug  8 14:32:12 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsconvert.h src/dblib/bcp.c src/dblib/dblib.c:
	* src/odbc/convert_tds2sql.c src/tds/convert.c:
	- allow to pass a precision to tds_strftime

Mon Aug  8 14:30:40 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/convert.c:
	- rewrote tds_convert_datetime4 using tds_convert_datetime

Mon Aug  8 14:27:15 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/convert.c src/tds/data.c src/tds/token.c:
	- conversion and data work on ms date/time

Mon Aug  8 14:21:23 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/ctlib/cs.c src/dblib/dblib.c:
	* src/odbc/convert_tds2sql.c src/tds/convert.c:
	- retain full precision in TDSDATEREC

Mon Aug  8 14:17:56 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/convert.c: use nanosecond precision parsing for time

Mon Aug  8 14:16:53 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsconvert.h src/tds/convert.c:
	- move tds_time structure declaration directly into
	  src/tds/convert.c

Mon Aug  8 13:52:21 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/data.c src/tds/mem.c:
	- add row_len function to TDSCOLUMNFUNCS

Mon Aug  8 13:51:14 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/data.c: separate variant type

Mon Aug  8 13:48:29 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/data.c: separate numeric type

Mon Aug  8 11:58:41 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/data.c src/tds/tds_checks.c:
	* src/tds/token.c:
	- start moving some code to src/tds/data.c and use some callbacks
	  for data

Mon Aug  8 11:41:57 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>