@@ -21,3 +21,4 @@ utf8_3
 numeric
 iconv_fread
 toodynamic
+challenge
