@@ -1,3 +1,8 @@
+Mon Aug  8 16:11:46 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/tds/unittests/.cvsignore src/tds/unittests/Makefile.am:
+	* src/tds/unittests/challenge.c:
+	- add test for challenge functions
+
 Mon Aug  8 14:33:22 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* include/tdsconvert.h src/tds/convert.c:
 	- improve ms time/date conversions
@@ -662,4 +667,4 @@ Sat Apr  9 16:15:00 EDT 2011	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.91 added because of release
 
 $FreeTDS$
-$Id: ChangeLog,v 1.3351 2011/08/08 12:33:18 freddy77 Exp $
+$Id: ChangeLog,v 1.3352 2011/08/08 14:11:44 freddy77 Exp $
